nicer user experience to paradrgaphEditor such as session saving (kinda). fixed language for paragrapgh editor too. and some more user exp

--- a/client/components/editCoursePage/modules/modules.module.sass
+++ b/client/components/editCoursePage/modules/modules.module.sass
@@ -69,4 +69,4 @@
   left: -20px
 
 .createModuleButton
-  bottom: 95px !important
+  bottom: 180px !important
